--- a/chess/index.html
+++ b/chess/index.html
@@ -6,6 +6,15 @@
     <title>Chess</title>
     <link rel="stylesheet" href="style.css">
     <script type="module" src="script.js"></script>
+    <script>
+        function sayHello(){
+            console.log("Hello")
+        }
+
+        function changeBackgroundColor(color){
+            document.body.style.setProperty("background-color", color)
+        }
+    </script>
     <link href='https://fonts.googleapis.com/css?family=JetBrains Mono' rel='stylesheet'>
 </head>
 <body>
