--- a/chess/index.html
+++ b/chess/index.html
@@ -14,6 +14,10 @@
         function changeBackgroundColor(color){
             document.body.style.setProperty("background-color", color)
         }
+
+        function inputMoveCode(moveCode){
+            console.log(moveCode)
+        }
     </script>
     <link href='https://fonts.googleapis.com/css?family=JetBrains Mono' rel='stylesheet'>
 </head>
